Added analytical expressions for the drift!=0 case to the tex files for 	- Rad Abs case 	- Abs Abs case

--- a/doc/greens_functions/tex/greensFunction1DAbsAbs.tex
+++ b/doc/greens_functions/tex/greensFunction1DAbsAbs.tex
@@ -8,5 +8,6 @@
 \begin{document}
 
 \include{include/greensFunction1DAbsAbs.include}
+\include{include/greensFunction1DwDriftAbsAbs.include}
 
 \end{document}
