--- a/doc/greens_functions/tex/greensFunction1DRadAbs.tex
+++ b/doc/greens_functions/tex/greensFunction1DRadAbs.tex
@@ -8,5 +8,6 @@
 \begin{document}
 
 \include{include/greensFunction1DRadAbs.include}
+\include{include/greensFunction1DwDriftRadAbs.include}
 
 \end{document}
