--- a/doc/greens_functions/tex/include/include.tex
+++ b/doc/greens_functions/tex/include/include.tex
@@ -22,3 +22,6 @@
 \renewcommand{\t}{\theta}
 \newcommand{\pdd}[2]{\frac{\partial^{2} #1}{\partial #2^{2}}}
 \newcommand{\ora}{\overrightarrow}
+
+\DeclareMathOperator{\erf}{erf}
+\DeclareMathOperator{\erfc}{erfc}
