Small change to README.

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Adapted by Thomas Miedema, Laurens Bossen and Thomas Sokolowski.
 
 Copyright (C) 2005-2008 The E-Cell Project
 
-Copyright (C) 2009 Fom Institute AMOLF, The Netherlands.
+Copyright (C) 2009 FOM Institute AMOLF, The Netherlands.
 
 
 
