Updated the docs for the Green's functions by the case "Abs Inf with drift" and some minor changes to those docs.

--- a/doc/greens_functions/tex/greensFunction1DAbsInf.tex
+++ b/doc/greens_functions/tex/greensFunction1DAbsInf.tex
@@ -8,5 +8,6 @@
 \begin{document}
 
 \include{include/greensFunction1DAbsInf.include}
+\include{include/greensFunction1DwDriftAbsInf.include}
 
 \end{document}
