--- a/doc/greens_functions/tex/greensFunctions.tex
+++ b/doc/greens_functions/tex/greensFunctions.tex
@@ -15,10 +15,18 @@
 \maketitle
 
 
-\input{include/greensFunction1DAbsAbs.include}
-\include{include/greensFunction1DAbsInf.include}
-\include{include/greensFunction1DRadAbs.include}
-\include{include/greensFunction1DRadInf.include}
-\include{include/greensFunction2DRadAbs.include}
+\newpage\input{include/greensFunction1DAbsAbs.include}
+\newpage\input{include/greensFunction1DwDriftAbsAbs.include}
+
+\newpage\include{include/greensFunction1DAbsInf.include}
+\newpage\include{include/greensFunction1DwDriftAbsInf.include}
+
+\newpage\include{include/greensFunction1DRadAbs.include}
+\newpage\include{include/greensFunction1DwDriftRadAbs.include}
+
+\newpage\include{include/greensFunction1DRadInf.include}
+\newpage\include{include/greensFunction1DwDriftRadInf.include}
+
+\newpage\include{include/greensFunction2DRadAbs.include}
 
 \end{document}
