--- a/doc/greens_functions/tex/include/greensFunction1DwDriftAbsAbs.include.tex
+++ b/doc/greens_functions/tex/include/greensFunction1DwDriftAbsAbs.include.tex
@@ -1,16 +1,18 @@
 
 \subsection{1D Abs Abs with drift $v\neq 0$}
 
+Solution on an interval $[a,b]$, initial condition $p(z,z',t'=0)=\delta (z-z')$.
+
 \paragraph{Green's function}
 \begin{align}
-  v(z,t|z',t'=0) &= \frac{2}{b-a}e^{-\frac{1}{4D_1t}\left[v^2t^2 - 2(z-z')vt \right]}
+  p(z,t|z',t'=0) &= \frac{2}{b-a}e^{-\frac{1}{4D_1t}\left[v^2t^2 - 2(z-z')vt \right]}
   \sum_{n=1}^{\infty}
   e^{-D_1n^2\pi^2 t} \sin\left(\frac{z-a}{b-a}n\pi\right) \sin\left(\frac{z'-a}{b-a}n\pi\right).
 \end{align}
 
 \paragraph{Survival probability}
 \begin{align}
-  S_z(t) = \int_a^b vdz
+  S_z(t) = \int_a^b pdz
   = 2e^{-\frac{1}{4D_1t}\left[ v^2t^2 - 2(z-z')vt \right]}
     \sum_{n=1}^{\infty} \frac{ e^{-D_1\left(\frac{n\pi}{b-a}\right)^2 t} \left[ e^{\frac{va}{2D_1}} + (-1)^ne^{\frac{vb}{2D_1}}\right] }{ \frac{v^2}{4D_1^2}(b-a)^2 + n^2\pi^2 }
     n\pi \sin\left(\frac{z'-a}{b-a}n\pi \right).
