--- a/doc/greens_functions/tex/include/greensFunction1DwDriftRadInf.include.tex
+++ b/doc/greens_functions/tex/include/greensFunction1DwDriftRadInf.include.tex
@@ -3,13 +3,13 @@
 
 \paragraph{Green's function}
 \begin{multline}
-  v(z,t|z',t'=0) = \frac{1}{\sqrt{4\pi D_1 t}} [
+  p(z,t|z',t'=0) = \frac{1}{\sqrt{4\pi D_1 t}} [
   e^{-(z-z'-vt)^2/(4 D_1 t)} +
   e^{-(z+z'-vt)^2/(4 D_1 t)} ] \\
   -(h+\frac{v}{2D_1})e^{vx + h \left[ (z+z') + (h + v/D_1) D_1 t \right]} \erfc\left(\frac{z+z'}{2\sqrt{D_1t}} + (h+\frac{v}{2D_1})\sqrt{D_1t} \right) 
   .\label{green-promoter-solo-drift}
 \end{multline}
-\textit{Source: Lamm, Schulten, J. Chem. Phys. 78(5), 1983.}
+\textit{Source: \textsc{Lamm \& Schulten}, J. Chem. Phys. 78(5), 1983.}
 
 \paragraph{Survival probability}
 \begin{align}
