--- a/doc/greens_functions/tex/include/include.tex
+++ b/doc/greens_functions/tex/include/include.tex
@@ -1,5 +1,5 @@
 
-\author{Thomas Miedema\\miedema@amolf.nl}
+\author{Thomas Miedema (miedema@amolf.nl)\\Thomas Sokolowski (sokolowski@amolf.nl)}
 \date{}
 
 \usepackage{amsmath}
