--- a/doc/greens_functions/tex/include/subSectionOnly.tex
+++ b/doc/greens_functions/tex/include/subSectionOnly.tex
@@ -7,7 +7,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \cfoot{}
 % Name instead of page numbers.
-\fancyfoot[RO]{Thomas Miedema (miedema@amolf.nl)}
+\fancyfoot[RO]{\small Th. Miedema (miedema@amolf.nl), Th. Sokolowski (sokolowski@amolf.nl)}
 
 
 % Disables chapter, section and subsection numbering.
