--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,10 @@
 
+Installation
+============
+
+[Download](http://github.com/gfrd/gfrd/archives/master) the 
+latest release of the code from [Github](http://github.com/gfrd/gfrd).
+
 Prerequisites
 -------------------------
 
