--- a/README
+++ b/README
@@ -1,7 +1,8 @@
+
 GFRD Simulator
 ==============
 
-Original code by Koichi Takahashi.
+E-Cell Particle Dynamics Prototype by Koichi Takahashi and Moriyoshi Koizumi.
 Adapted by Thomas Miedema, Laurens Bossen and Thomas Sokolowski.
 
 Copyright (C) 2005-2008 The E-Cell Project
